# basicProjectSetupTest

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt  main.cpp
